# trve_bevy

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  NOTICE  README.md  release-plz.toml
crates/trve_bevy_attribution/: CHANGELOG.md  Cargo.toml  README.md
crates/trve_bevy_attribution/src/: attribution_asset.rs  attribution_asset_loader.rs  lib.rs  plugin.rs  valid_licenses.rs
crates/trve_bevy_localization/: CHANGELOG.md  Cargo.toml  README.md
crates/trve_bevy_localization/src/: events.rs  lib.rs  loading.rs  localization_manager.rs  localized_text.rs  localized_text_2d.rs  localized_text_span.rs  plugin.rs  run_conditions.rs
crates/trve_bevy_localization/src/resources/: default_locale.rs  localization_asset_folder.rs  localization_assets_load_state.rs  localization_folder_handle.rs  mod.rs  supported_locales.rs
crates/trve_bevy_localization/src/text/: localized_text.rs  mod.rs
crates/trve_bevy_time/: CHANGELOG.md  Cargo.toml  README.md
crates/trve_bevy_time/src/: entity_timer.rs  lib.rs
src/components/: entity_timer.rs  global_timer.rs  mod.rs
