[package]
name = "trve_bevy"
version = "0.1.1"
edition = "2024"
description = "A collection of opinionated plugins and tools for making Bevy games."
keywords = ["gamedev", "bevy"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/TrveSoft/trve_bevy"
rust-version = "1.95.0"

[features]
bevy_reflect = ["bevy_ecs/bevy_reflect", "bevy_time/bevy_reflect"]

[dependencies]
bevy_derive = { version = "0.18", default-features = false }
bevy_ecs = { version = "0.18", default-features = false }
bevy_time = { version = "0.18.1", default-features = false }

[workspace]
resolver = "2"
members = ["crates/*"]
