[package]
name = "trve_bevy_attribution"
version = "0.1.0"
edition = "2024"
description = "Utilities to load standardized attribution and licensing metadata files for game assets."
license.workspace = true
repository.workspace = true
keywords.workspace = true
rust-version = "1.95.0"

[features]
default = ["multi_threaded", "bevy_app/default", "bevy_ecs/default"]

asset_processor = ["bevy_asset/asset_processor"]
bevy_reflect = ["bevy_app/bevy_reflect", "bevy_ecs/bevy_reflect"]
debug = ["bevy_app/bevy_debug_stepping", "bevy_ecs/debug"]
file_watcher = ["bevy_asset/file_watcher"]
multi_threaded = ["bevy_asset/multi_threaded", "bevy_ecs/multi_threaded"]
trace = [
    "bevy_app/trace",
    "bevy_asset/trace",
    "bevy_ecs/trace",
    "bevy_log/trace",
    "bevy_log/tracing-tracy",
]

[dependencies]
bevy_app = { version = "0.19", default-features = false }
bevy_asset = { version = "0.19", default-features = false }
bevy_derive = { version = "0.19", default-features = false }
bevy_ecs = { version = "0.19", default-features = false }
bevy_log = { version = "0.19", default-features = false }
bevy_platform = { version = "0.19", default-features = false }
bevy_reflect = { version = "0.19", default-features = false, features = [
    "std",
] }
serde = { version = "1", default-features = false, features = [
    "std",
    "derive",
] }
strum = { version = "0.28", default-features = false, features = ["derive"] }
thiserror = { version = "2", default-features = false, features = ["std"] }
toml = { version = "1", default-features = false, features = [
    "std",
    "serde",
    "parse",
] }
