[package]
name = "trve_bevy_attribution"
version = "0.1.0"
edition = "2024"
description = "Utilities to load standardized attribution and licensing metadata files for game assets."
license.workspace = true
repository.workspace = true
keywords.workspace = true
rust-version = "1.95.0"

[features]
default = ["std"]

std = ["bevy_reflect/std", "serde/std", "thiserror/std", "toml/std"]

[dependencies]
bevy_app = { version = "0.19", default-features = false }
bevy_asset = { version = "0.19", default-features = false }
bevy_derive = { version = "0.19", default-features = false }
bevy_ecs = { version = "0.19", default-features = false }
bevy_log = { version = "0.19", default-features = false }
bevy_platform = { version = "0.19", default-features = false }
bevy_reflect = { version = "0.19", default-features = false }
serde = { version = "1", default-features = false, features = ["derive"] }
strum = { version = "0.28", default-features = false, features = ["derive"] }
thiserror = { version = "2", default-features = false }
toml = { version = "1", default-features = false, features = [
    "serde",
    "parse",
] }
