[package]
name = "trve_bevy_time"
version = "0.1.1"
edition = "2024"
description = "Time related utilities."
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version = "1.95.0"

[features]
bevy_reflect = ["bevy_ecs/bevy_reflect", "bevy_time/bevy_reflect"]

[dependencies]
bevy_derive = { version = "0.19", default-features = false }
bevy_ecs = { version = "0.19", default-features = false }
bevy_time = { version = "0.19", default-features = false }
